--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
     "server": "json-server --watch db.json"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
